--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <div class="game-box">
             <p>GAME</p>
         </div>
+        <div class="sidebar">
+            <div class="name-plate">
+                <p>FLEURY14</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
