--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="name-plate">
                 <p>FLEURY14</p>
             </div>
+            <div class="tracker"></div>
         </div>
     </div>
 </body>
