--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <p>FLEURY14</p>
             </div>
             <div class="tracker"></div>
+            <div class="flag-space"></div>
         </div>
     </div>
 </body>
