--- a/utility.html
+++ b/utility.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="css/utility.css">
 </head>
 <body>
-    <div class="pad-status">
-        <p>Game pad </p>
-        <p id="padStatus"></p>
-    </div>
-    <div class="game-status">
-        <p>Game Status </p>
-        <p id="gameStatus">Off</p>
-    </div>
-    <div class="time">
-        <label>Menu Time</label>
-        <p id="currentTime"></p>
-    </div>
+    <main>
+        <div class="pad-status">
+            <p>Game pad </p>
+            <p id="padStatus"></p>
+        </div>
+        <div class="game-status">
+            <p>Game Status </p>
+            <p id="gameStatus">Off</p>
+        </div>
+        <div class="time">
+            <label>Menu Time</label>
+            <p id="currentTime"></p>
+        </div>
+    </main>
     <script src="js/timer.js"></script>
     <script src="js/utility.js"></script>
 </body>
